Fixing sidebars in landing builders on Safari [2]

--- a/event_landing/demo/demo.css
+++ b/event_landing/demo/demo.css
@@ -310,11 +310,7 @@
     justify-content: flex-start;
     overflow: hidden;
     left: 0;
-    display: -webkit-box;
-    display: -webkit-flex;
     display: block;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
 }
